@@ -34,11 +34,14 @@ carboncopy
 carbondelete
 carbonextern
 carbonfrom
+carbonfromarea
+carbongroups
 carbonkeepsb
 carbonkludge
 carbonmove
 carbonout
 carbonreason
+carbonrule
 carbonsubj
 carbontext
 carbonto
